// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericInput should be rendered correctly 1`] = `
<div
  className="container uui-input-box colorSky root size-36 mode-form"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input line-height-18 font-size-14 v-padding-8"
    inputMode="numeric"
    max={10}
    min={1}
    onChange={[Function]}
    placeholder="0"
    step={1}
    type="number"
    value="5"
  />
  <div
    className="uui-numeric-input-button-group"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`NumericInput should be rendered correctly with new props 1`] = `
<div
  className="container uui-input-box colorSky root size-24 mode-cell"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input line-height-18 font-size-12 v-padding-2"
    inputMode="numeric"
    max={10}
    min={1}
    onChange={[Function]}
    placeholder="0"
    step={1}
    type="number"
    value="5"
  />
  <div
    className="uui-numeric-input-button-group"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
  </div>
</div>
`;
